test/should_fail/ExtraFields.hx
package test.should_fail;

@:keep
final e = test.Optionals.test({test: true, weirdField: "null"});
